--- a/css/marco.css
+++ b/css/marco.css
@@ -315,14 +315,19 @@ body {
     margin-top: -120px;
 }
 
-.imagenPrincipal {
-
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: -1em;
-}
+    .imagenPrincipal {
+        
+        
+        margin-bottom: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        
+        margin-top: 2em;
+        
+        
+    }
 
 .imagenPrincipal img {
     width: 50em;
